[gd_scene load_steps=19 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Entities/Tower/Tower.tscn" type="PackedScene" id=2]
[ext_resource path="res://Effects/Camera/ShakableCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/Panel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Effects/frame_freezer.gd" type="Script" id=5]
[ext_resource path="res://Effects/explosion.gd" type="Script" id=6]
[ext_resource path="res://Misc/wave_manager.gd" type="Script" id=7]
[ext_resource path="res://GUI/WaveIndicator.tscn" type="PackedScene" id=8]
[ext_resource path="res://Resources/Ground.png" type="Texture" id=9]
[ext_resource path="res://Resources/Backgrounds - FREE/Background 07/PARALLAX/layer_04_1920 x 1080.png" type="Texture" id=11]
[ext_resource path="res://Resources/Backgrounds - FREE/Background 07/PARALLAX/layer_06_1920 x 1080.png" type="Texture" id=14]
[ext_resource path="res://Resources/Backgrounds - FREE/Background 07/PARALLAX/layer_05_1920 x 1080.png" type="Texture" id=15]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.286275, 0.584314, 0.701961, 1, 0.85098, 0.945098, 0.972549, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.141176, 0.360784, 0.0980392, 0.392157, 0.270588, 0.266667, 0.266667, 0.509804 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 723.126, 76 )

[sub_resource type="Animation" id=6]
resource_name = "explode"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("OrangeShape:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.686275, 0.270588, 0.105882, 0 ), Color( 0.686275, 0.270588, 0.105882, 0.509804 ), Color( 0.686275, 0.270588, 0.105882, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WhiteShape:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OrangeShape:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WhiteShape:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="LevelElements" type="Node2D" parent="."]

[node name="Background" type="Node2D" parent="LevelElements"]

[node name="Layer2" type="Sprite" parent="LevelElements/Background"]
position = Vector2( 531.742, 160.394 )
rotation = -1.5708
scale = Vector2( 0.449064, 1091.92 )
texture = SubResource( 2 )

[node name="Layer3" type="Sprite" parent="LevelElements/Background"]
position = Vector2( 540.851, 315.997 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="Layer4" type="Sprite" parent="LevelElements/Background"]
position = Vector2( 510.315, 302.193 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 15 )

[node name="Layer5" type="Sprite" parent="LevelElements/Background"]
position = Vector2( 510.502, 309.727 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 11 )

[node name="Layer6" type="Sprite" parent="LevelElements/Background"]
visible = false
position = Vector2( 510.502, 257.727 )
scale = Vector2( 0.7, 0.7 )

[node name="Ground" type="StaticBody2D" parent="LevelElements" groups=[
"ground",
]]
collision_layer = 33

[node name="TextureRect" type="TextureRect" parent="LevelElements/Ground"]
margin_left = -26.0
margin_top = 424.0
margin_right = 1032.0
margin_bottom = 616.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gradient" type="Sprite" parent="LevelElements/Ground"]
position = Vector2( 516.972, 549.479 )
rotation = 1.5708
scale = Vector2( 0.0802427, 1086.04 )
texture = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelElements/Ground"]
position = Vector2( 626.322, 528.186 )
shape = SubResource( 5 )

[node name="Tower" parent="LevelElements" instance=ExtResource( 2 )]
position = Vector2( 99.8085, 430.833 )

[node name="Spawn" type="Node2D" parent="."]

[node name="EnemyGround" type="Position2D" parent="Spawn"]
position = Vector2( 1000, 420 )

[node name="EnemyAir" type="Position2D" parent="Spawn"]
position = Vector2( 1000, 100.882 )

[node name="AllyGround" type="Position2D" parent="Spawn"]
position = Vector2( 93, 420 )

[node name="AllyAir" type="Position2D" parent="Spawn"]
position = Vector2( 52.8605, 98.7527 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Allies" type="Node2D" parent="."]

[node name="MaxPos" type="Position2D" parent="Allies"]
position = Vector2( 919.201, 427.983 )

[node name="Objects" type="Node2D" parent="."]

[node name="ShakableCamera" parent="." instance=ExtResource( 3 )]
position = Vector2( 510, 300 )
current = true

[node name="FrameFreezer" type="Node2D" parent="."]
position = Vector2( 510, 300 )
script = ExtResource( 5 )
delay_ms = 90

[node name="WaveManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="WaveIndicator" parent="." instance=ExtResource( 8 )]
position = Vector2( 510.802, 219.886 )
scale = Vector2( 1e-05, 1e-05 )

[node name="Tween" type="Tween" parent="."]

[node name="PanelContainer" type="Node2D" parent="."]

[node name="Panel" parent="PanelContainer" instance=ExtResource( 4 )]
margin_bottom = 52.0

[node name="PauseContainer" type="Node2D" parent="."]
position = Vector2( 510.053, 299.617 )

[node name="Explosion" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="WhiteShape" type="Polygon2D" parent="Explosion"]
visible = false
modulate = Color( 1, 1, 1, 0 )
polygon = PoolVector2Array( -29.5427, -8.61024, 1068.01, -10.5268, 1075.16, 628.198, -29.1594, 625.643 )

[node name="OrangeShape" type="Polygon2D" parent="Explosion"]
visible = false
modulate = Color( 0.686275, 0.270588, 0.105882, 0 )
color = Color( 0.729412, 0.231373, 0.0117647, 0.470588 )
polygon = PoolVector2Array( -21.2376, -20.8763, 1134.45, -20.3652, 1134.06, 738.592, -173.285, 728.882, -169.324, -25.6038 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Explosion"]
anims/explode = SubResource( 6 )
[connection signal="destroyed" from="LevelElements/Tower" to="." method="_on_Tower_destroyed"]
[connection signal="spawn_enemy" from="WaveManager" to="." method="_on_WaveManager_spawn_enemy"]
[connection signal="animation_finished" from="WaveIndicator" to="." method="_on_WaveIndicator_animation_finished"]
[connection signal="item_purchased" from="PanelContainer/Panel" to="." method="_on_Panel_item_purchased"]
